# llfix

./: LICENSE  README.md  RELEASE_NOTES.md  llfix.cmake
benchmarks/: benchmark_utilities.h  (+1 more)
benchmarks/networked_client_tx/: CMakeLists.txt  Makefile  README.md  benchmark.cpp  calculate_throughput.py  config.cfg  sample_client.h
benchmarks/networked_client_tx/server/: CMakeLists.txt  Makefile  config.cfg  server.cpp  server.vcxproj
benchmarks/networked_server_rx/: CMakeLists.txt  Makefile  README.md  benchmark_server.h  calculate_throughput.py  clean.sh  config.cfg  server.cpp
benchmarks/networked_server_rx/clients/: CMakeLists.txt  Makefile  clean.bat  clean.sh  clients.cpp  clients.vcxproj  config_local.cfg  sample_client.h
examples/fix_exchange_simulator/: CMakeLists.txt  config.cfg  example.cpp  exchange_simulator.cpp  exchange_simulator.h
examples/fix_trade_client/: CMakeLists.txt  config.cfg  csv_file.h  example.cpp  sample_client.cpp  sample_client.h
examples/generated_client/: CMakeLists.txt  MyClient.cpp  MyClient.h  README.md  client.cpp  config.cfg
examples/generated_client/fields/: CxlRejReason.h  CxlRejResponseTo.h  EncryptMethod.h  ExecInst.h  HandlInst.h  LastLiquidityInd.h  MessageEncoding.h  MsgType.h  OrdStatus.h  PartyIDSource.h  PartyRole.h  PriceType.h  SecurityIDSource.h  SecurityType.h  SessionRejectReason.h
examples/generated_client/messages/: ExecutionReport.cpp  Logon.h  OrderCancelReject.cpp  OrderCancelRequest.cpp  OrderCancelRequest.h  Reject.cpp  ResendRequest.cpp  SequenceReset.cpp  TestRequest.h
examples/generated_server/: CMakeLists.txt  FIX44_reduced.xml  MyServer.cpp  MyServer.h  README.md  config.cfg  server.cpp
examples/generated_server/fields/: BusinessRejectReason.h  ExecRestatementReason.h  ExecType.h  LastCapacity.h  OrdRejReason.h  OrdType.h  OrderCapacity.h  Side.h  TimeInForce.h  all_fields.h
examples/generated_server/messages/: BusinessMessageReject.cpp  BusinessMessageReject.h  ExecutionReport.h  Heartbeat.cpp  Heartbeat.h  Logon.cpp  Logout.cpp  Logout.h  NewOrderSingle.cpp  NewOrderSingle.h  OrderCancelReject.h  OrderCancelReplaceRequest.cpp  OrderCancelReplaceRequest.h  Reject.h  ResendRequest.h  SequenceReset.h  TestRequest.cpp
examples/order_router/: CMakeLists.txt  README.md  example.cpp  order_router.cpp  order_router.h  order_router_settings.h
examples/order_router/configs/: engine.cfg  inbound.cfg  outbound.cfg  routing.cfg
examples/order_router/scripts/: client1.py  client2.py  server1.py  server2.py
tests/fix_client_automation/automation/: CMakeLists.txt  Makefile  automation.cpp  automation.vcxproj  clean.bat  config.cfg  deserialiser  test_client.h
tests/fix_server_automation/server/: CMakeLists.txt  Makefile  automation.cpp  automation_server.h  build_msvc.bat  clean.bat  config.cfg  my_message_persister.h  run_mode1.bat  run_mode1.sh  run_mode2.bat  run_mode2.sh  run_mode3.bat  run_mode3.sh
tests/other_networked_tests/admin_msgs_initiated_by_fix_client/: CMakeLists.txt  Makefile  build_msvc.bat  test.cpp  test_fix_server_resend_requests_negative.py  test_fix_server_test_requests.py
tests/other_networked_tests/admin_msgs_initiated_by_fix_server/: CMakeLists.txt  clean.bat  client1.py  client2.py  config.cfg  test.cpp
tests/other_networked_tests/binance_testnet/: CMakeLists.txt  Makefile  README.md  binance_client.h  binance_utils.h  build_msvc.bat  clean.bat  client.cpp  client.vcxproj  config.cfg
tests/other_networked_tests/fix_client_validations/: CMakeLists.txt  build_msvc.bat  clean.bat  config.cfg  test.cpp  test.vcxproj  test_fix_server.py
tests/other_networked_tests/fix_server_throttling/: CMakeLists.txt  Makefile  client1.py  client2.py  client3.py  config.cfg  test.cpp
tests/other_networked_tests/fix_server_validations/: CMakeLists.txt  Makefile  client.py  config.cfg  test.cpp  test.vcxproj
tests/other_networked_tests/fix_server_validations_logons/: 1_no_tag34.py  2_tag_with_no_value.py  3_wrong_comp_id.py  4_wrong_message_type.py  5_high_sequence_no.py  6_no_t108.py  7_no_t98.py  8_invalid_heartbeat_interval.py  9_double_logon.py  CMakeLists.txt  clean.bat  config.cfg  test.cpp  test.vcxproj
tests/other_networked_tests/logon_password_authentication/client/: CMakeLists.txt  build_msvc.bat  clean.bat  client.cpp  config.cfg  config_new_password.cfg  run.bat  run_with_new_password.bat
tests/other_networked_tests/logon_password_authentication/server/: CMakeLists.txt  Makefile  build_msvc.bat  clean.bat  server.cpp  server_config.cfg
tests/other_networked_tests/nested_repeating_groups/server/: CMakeLists.txt  Makefile  build_msvc.bat  clean.bat  config.cfg  server.cpp  server.vcxproj
tests/other_networked_tests/raw_data_and_unicode/client/: CMakeLists.txt  Makefile  clean.bat  client.cpp  client.vcxproj  config.cfg
tests/other_networked_tests/raw_data_and_unicode/server/: CMakeLists.txt  clean.bat  server.cpp  server.vcxproj  server_config.cfg
tests/other_networked_tests/tcpdirect_fix_client/: CMakeLists.txt  Makefile  clean.sh  config.cfg  example.cpp  sample_client.h  test_orders.csv
tests/stress_tests/clients/: CMakeLists.txt  Makefile  build_msvc.bat  clean.bat  clean.sh  client.crt  clients.cpp  clients.vcxproj  config_local.cfg  config_remote.cfg  sample_client.h
tests/stress_tests/server/: CMakeLists.txt  Makefile  build_msvc.bat  ca.crt  clean.bat  clean.sh  config.cfg  server.cpp  server.crt  server.vcxproj  test_server.h
tests/stress_tests/server/fields/: MsgType.h  OrdStatus.h  PartyRole.h  all_fields.h
tests/stress_tests/server/messages/: ExecutionReport.cpp  ExecutionReport.h  NewOrderSingle.cpp  NewOrderSingle.h
tests/unit_test_fix_dictionary/: CMakeLists.txt  Makefile  build_msvc.bat  unit_test.cpp  unit_test.vcxproj
tests/unit_test_fix_dictionary_validator/: CMakeLists.txt  Makefile  minimal.xml  unit_test.cpp  unit_test.vcxproj
tests/unit_test_fix_messages/: CMakeLists.txt  Makefile  build_msvc.bat  unit_test.cpp  validators.h
tests/unit_test_fix_parser/: CMakeLists.txt  build_msvc.bat  unit_test.cpp  unit_test.vcxproj
(+260 files in other folders)
